--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header>
 <a id="go-back-home" href="/"><img src="/images/scribble.png" alt="scribble" width="53" height="59"></a>
-<h2>{{ site.title }}</h2>
+<h2 class="header">{{ site.title }}</h2>
 </header>
